# rime-liur-ios

./: .gitignore  README.md  allbpm.schema.yaml  default.custom.yaml  easy_en.custom.yaml  easy_en.dict.yaml  easy_en.schema.yaml  git_commands_cheatsheet.md  installation.yaml  liur.custom.yaml  liur.schema.yaml  liur_symbols.dict.yaml  liur_symbols.schema.yaml  publish_all.sh  rime.lua  sample_predict.db
_variants/english/: liur.schema.yaml  rime.lua
_variants/english-block/: liur.schema.yaml
_variants/main/: liur.schema.yaml
_variants/main-block/: liur.schema.yaml
docs/: _sidebar.md  index.html  sitemap.xml  user-guide.md
librime-predict/: CMakeLists.txt
librime-predict/include/X11/: keysym.h
librime-predict/include/rime/: build_config.h
lua/: liu_auto_clear.lua  liu_code_decoder.lua  liu_common.lua  liu_data.lua  liu_datetime.lua  liu_extended_backspace.lua  liu_extended_data.lua  liu_extended_filter.lua  liu_extended_segmentor.lua  liu_fancy_filter.lua  liu_fancy_processor.lua  liu_fancy_translator.lua  liu_help.lua  liu_help_filter.lua  liu_key_blocker.lua  liu_letter_variants.lua  liu_phonetic_hint_processor.lua  liu_phonetic_override.lua  liu_quick_hint.lua  liu_quick_mode_processor.lua  liu_remove_trad_in_w2c.lua  liu_symbol_data.lua  liu_symbols_hint.lua  liu_symbols_hint_filter.lua  liu_symbols_number_processor.lua  liu_symbols_processor.lua  liu_wildcard_code_hint.lua  liu_wildcard_filter.lua  liu_wildcard_processor.lua
opencc/: liu_phonetic.json  liu_phonetic.txt  liu_phonetic_simp.txt
opencc/liu_valid_keys/: _root.txt  a.txt  b.txt  c.txt  (+23 more)
